--- a/HTM/main.htm
+++ b/HTM/main.htm
@@ -1,12 +1,6 @@
 <html>
 
-<body style="
-            background-image: url(&quot;https://www.panguidc.com/images/2024/08/20/9629239c33ad33fd9f7f0e2146283757.jpg&quot;);
-            background-repeat: no-repeat;
-            background-position: center center;
-            background-attachment: fixed;
-            background-size: cover;
-        ">
+<body style="background-image: url(&quot;https://www.panguidc.com/images/2024/08/20/9629239c33ad33fd9f7f0e2146283757.jpg&quot;);background-repeat: no-repeat;background-position: center center;background-attachment: fixed;background-size: cover;">
   <h1 style="font-size: 4rem">
     <a href="test.htm" style="color: #2ecc71"> WEL </a>
     <a href="c.htm" style="color: #2ecc71"> COME </a>
@@ -16,41 +10,41 @@
     <a href="sb.htm" style="color: cornflowerblue"> S </a>
   </h2>
   <h2 style="text-align: right;color: cornflowerblue">
-    
+
   </h2>
-    <tr>
-      <a href="de.htm">
-        <img src="res/1.jpg" width="100%" />
-      </a>
-    </tr>
-    <tr>
-      <a href="F.htm">
-        <img src="res/F.02.jpg" width="100%" />
-      </a>
-    </tr>
-    <tr>
-      <video src="res/bau.mp4" muted width="50%" poster="res/lod.gif" autoplay loop></video>
-    </tr>
-    <tr>
-      <video src="res/GV4AUzDWwAA83FV.mp4" muted width="50%" poster="res/lod.gif" autoplay loop></video>
-    </tr>
-    <tr>
-      <a href="EVIL.LOVE.HTM">
-        <img width="100%" src="res/T/E.gif" />
-      </a>
-    </tr>
-    <tr>
-      <a href="https://b23.tv/MD84R1V">
-        <img width="100%" src="res/T/N.gif" />
-      </a>
-    </tr>
-    </table>
-    <hr />
-    <h1>
-      <a href="big.tes.htm" style="color: red"> BIG TE </a>
-      <a href="sb.htm" style="color: red"> S </a>
-      <a href="big.tes.htm" style="color: red"> T </a>
-    </h1>
+  <tr>
+    <a href="de.htm">
+      <img src="res/1.jpg" width="100%" />
+    </a>
+  </tr>
+  <tr>
+    <a href="F.htm">
+      <img src="res/F.02.jpg" width="100%" />
+    </a>
+  </tr>
+  <tr>
+    <video src="res/bau.mp4" muted width="50%" poster="res/lod.gif" autoplay loop></video>
+  </tr>
+  <tr>
+    <video src="res/GV4AUzDWwAA83FV.mp4" muted width="50%" poster="res/lod.gif" autoplay loop></video>
+  </tr>
+  <tr>
+    <a href="EVIL.LOVE.HTM">
+      <img width="100%" src="res/T/E.gif" />
+    </a>
+  </tr>
+  <tr>
+    <a href="https://b23.tv/MD84R1V">
+      <img width="100%" src="res/T/N.gif" />
+    </a>
+  </tr>
+  </table>
+  <hr />
+  <h1>
+    <a href="big.tes.htm" style="color: red"> BIG TE </a>
+    <a href="sb.htm" style="color: red"> S </a>
+    <a href="big.tes.htm" style="color: red"> T </a>
+  </h1>
 </body>
 
 </html>
