--- a/HTM/other/other.htm
+++ b/HTM/other/other.htm
@@ -16,29 +16,29 @@
 <a href="https://www.firefox.com.cn/">
   <h1 style="text-align: center; color: skyblue">FIREFOX</h1>
 </a>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/V/le.mp4" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="s/le.mp3" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
 
 </html>
