--- a/HTM/big.tes.htm
+++ b/HTM/big.tes.htm
@@ -10,19 +10,13 @@
   </video>
   <br>
   <hr />
-  <audio width="100%" controls src="res/V/Q-100.mp4" poster="res/Lod.gif">
-  </audio>
   <h1 style="color: skyblue">
-    <a href="other.htm">
+    <a href="other/other.htm">
       OTHER
     </a>
     <br>
-    <a href="zd.htm">
+    <a href="other/zd.htm">
       zood
-    </a>
-    <br>
-    <a href="pf.htm">
-      payphone
     </a>
   </h1>
 </body>
