--- a/HTM/!.htm
+++ b/HTM/!.htm
@@ -5,12 +5,11 @@ background-attachment:fixed; background-size:cover;">
 <h1 style="text-align:center;color: yellow">
   她们在等你!
 </h1>
-<br>
+<hr>
 <a href="power.htm">
-  <img src="res/L/n.jpg" width="49%">
+  <img src="res/L/n.jpg" width="49%" align="lift">
 </a>
 <a href="lu.htm">
-  <img src="res/L/y.jpg" width="49%">
+  <img src="res/L/y.jpg" width="49%" align="right">
 </a>
-
 </html>
