--- a/HTM/main.htm
+++ b/HTM/main.htm
@@ -10,36 +10,29 @@
     <a href="sb.htm" style="color: cornflowerblue"> S </a>
   </h2>
   <h2 style="text-align: right;color: cornflowerblue">
-
   </h2>
-  <tr>
-    <a href="de.htm">
-      <img src="res/1.jpg" width="100%" />
-    </a>
-  </tr>
-  <tr>
-    <a href="F.htm">
-      <img src="res/F.02.jpg" width="100%" />
-    </a>
-  </tr>
-  <tr>
-    <video src="res/bau.mp4" muted width="50%" poster="res/lod.gif" autoplay loop></video>
-  </tr>
-  <tr>
-    <video src="res/GV4AUzDWwAA83FV.mp4" muted width="50%" poster="res/lod.gif" autoplay loop></video>
-  </tr>
-  <tr>
-    <a href="EVIL.LOVE.HTM">
-      <img width="100%" src="res/T/E.gif" />
-    </a>
-  </tr>
-  <tr>
-    <a href="https://b23.tv/MD84R1V">
-      <img width="100%" src="res/T/N.gif" />
-    </a>
-  </tr>
+  <a href="de.htm">
+    <img src="res/1.jpg" width="100%" />
+  </a>
+  <a href="F.htm">
+    <img src="res/F.02.jpg" width="100%" />
+  </a>
+  <table>
+    <tr>
+      <video autoplay poster="res/Lod.gif" width="50%" loop>
+        <source src="res/GV4AUzDWwAA83FV.mp4" type="video/mp4">
+      </video>
+    </tr>
+    <tr>
+      <video style="m" autoplay poster="res/Lod.gif" width="50%" loop>
+        <source src="res/bau.mp4" type="video/mp4">
+      </video>
+    </tr>
   </table>
-  <hr />
+  <a href="EVIL.LOVE.HTM">
+    <img width="100%" src="res/T/E.gif" />
+  </a>
+  <hr>
   <h1>
     <a href="big.tes.htm" style="color: red"> BIG TE </a>
     <a href="sb.htm" style="color: red"> S </a>
