--- a/HTM/about/!.htm
+++ b/HTM/about/!.htm
@@ -1,15 +1,15 @@
 <html style="background-image:url('http://www.panguidc.com/images/2024/08/21/96bbf0c2a3fa0ab48833336a90569a16.webp');
 background-repeat:no-repeat; background-position:center center;
 background-attachment:fixed; background-size:cover;">
-<img src="res/L/!.png" width="75%" hspace="12.5%">
+<img src="L/!.png" width="75%" hspace="12.5%">
 <h1 style="text-align:center;color: yellow">
   她们在等你!
 </h1>
 <hr>
 <a href="power.htm">
-  <img src="res/L/n.jpg" width="49%" align="lift">
+  <img src="L/n.jpg" width="49%" align="lift">
 </a>
 <a href="lu.htm">
-  <img src="res/L/y.jpg" width="49%" align="right">
+  <img src="L/y.jpg" width="49%" align="right">
 </a>
 </html>
