--- a/HTM/about/about.htm
+++ b/HTM/about/about.htm
@@ -8,7 +8,7 @@
   </h1>
   <br>
   <a href="power.htm">
-    <img hspace="25%" alt="头像" width="50%" src="res/M/M.png">
+    <img hspace="25%" alt="头像" width="50%" src="M/M.png">
   </a>
   <h2 style="text-align:center;color: purple">
     NAME
