--- a/HTM/about/lu.htm
+++ b/HTM/about/lu.htm
@@ -10,25 +10,25 @@
 <h1 style="text-align: center; color: yellow">斐济仙人</h1>
 <hr />
 <a href="https://www.123pan.com/s/nrbLVv-5BoI.html">
-  <img src="res/L/pac.png" width="25%" hspace="37.5%" />
+  <img src="L/pac.png" width="25%" hspace="37.5%" />
 </a>
 <a href="https://picawang.com/">
   <h1 style="text-align: center; color: yellow">哔咔 PicACG</h1>
 </a>
 <a href="https://www.123pan.com/s/nrbLVv-qBoI.html">
-  <img src="res/L/pe.png" width="25%" hspace="37.5%" />
+  <img src="L/pe.png" width="25%" hspace="37.5%" />
 </a>
 <a href="https://github.com/Notsfsssf/pixez-flutter;color: yellow">
   <h1 style="text-align: center; color: yellow">pixez</h1>
 </a>
 <a href="https://www.123pan.com/s/nrbLVv-6BoI.html">
-  <img src="res/L/jm.png" width="25%" hspace="37.5%" />
+  <img src="L/jm.png" width="25%" hspace="37.5%" />
 </a>
 <a href="https://18comic.vip/">
   <h1 style="text-align: center; color: yellow">禁漫天堂</h1>
 </a>
 <a href="https://www.123pan.com/s/nrbLVv-yBoI.html">
-  <img src="res/L/pic.png" width="25%" hspace="37.5%" />
+  <img src="L/pic.png" width="25%" hspace="37.5%" />
 </a>
 <a href="https://github.com/wgh136/PicaComic">
   <h1 style="text-align: center; color: yellow">PicaComic</h1>
