--- a/HTM/main.htm
+++ b/HTM/main.htm
@@ -6,7 +6,7 @@
     <a href="c.htm" style="color: #2ecc71"> COME </a>
   </h1>
   <h2 style="text-align: right; color: cornflowerblue">
-    <a href="about.htm" style="color: cornflowerblue"> ABOUT </a>
+    <a href="about/about.htm" style="color: cornflowerblue"> ABOUT </a>
     <a href="sb.htm" style="color: cornflowerblue"> S </a>
   </h2>
   <h2 style="text-align: right;color: cornflowerblue">
