--- a/HTM/about/about.htm
+++ b/HTM/about/about.htm
@@ -25,7 +25,11 @@
         DEATHLYSTILLNESS@OUTLOOK.COM
       </h2>
     </a>
-
+    <a href="work.htm">
+      <h1 style="text-align: center;color: purple">
+        WORK
+      </h1>
+    </a>
 </body>
 
 </html>
