--- a/HTM/main.htm
+++ b/HTM/main.htm
@@ -11,7 +11,7 @@
   </h2>
   <h2 style="text-align: right;color: cornflowerblue">
   </h2>
-  <a href="de.htm">
+  <a href="DE.htm">
     <img src="res/1.jpg" width="100%" />
   </a>
   <a href="F.htm">
