--- a/HTM/main.htm
+++ b/HTM/main.htm
@@ -8,6 +8,10 @@
   <h2 style="text-align: right; color: cornflowerblue">
     <a href="about/about.htm" style="color: cornflowerblue"> ABOUT </a>
     <a href="sb.htm" style="color: cornflowerblue"> S </a>
+    <br>
+    <a href="about/work.htm" style="color: cornflowerblue">
+      WORK
+    </a>
   </h2>
   <h2 style="text-align: right;color: cornflowerblue">
   </h2>
