--- a/HTM/about/work.htm
+++ b/HTM/about/work.htm
@@ -72,6 +72,9 @@ background-attachment:fixed; background-size:cover;">
     </h1>
     <h1>
       ps:作者暂未更新
+      <br>
+      <br>
+      特别鸣谢:我的儿子:ddxgyff
     </h1>
   </div>
   <div class="center">
