--- a/HTM/about/work.htm
+++ b/HTM/about/work.htm
@@ -76,6 +76,9 @@ background-attachment:fixed; background-size:cover;">
       <br>
       特别鸣谢:我的儿子:ddxgyff
     </h1>
+    <h6 class="text">
+      已被真实
+    </h6>
   </div>
   <div class="center">
     <a href="https://play.google.com/store/apps/details?id=com.bobek.compass">
