--- a/HTM/about/power.htm
+++ b/HTM/about/power.htm
@@ -6,10 +6,9 @@
         background-size: cover;
     ">
 <a href="!.htm">
-  <img hspace="12.5%" src="http://www.panguidc.com/images/2024/08/21/e5ba240264e02f714de703f681d26bfd.jpeg"
-                                                                                                                          width="75%" />
+  <img hspace="12.5%" src="http://www.panguidc.com/images/2024/08/21/e5ba240264e02f714de703f681d26bfd.jpeg" width="75%" />
 </a>
 <h1 style="text-align: center; color: greenyellow">POWER BY</h1>
 <h1 style="text-align: center; color: greenyellow">斐济仙人</h1>
-
+<audio src="L/cf.mp3" autoplay loop></audio>
 </html>
