--- a/HTM/about/work.htm
+++ b/HTM/about/work.htm
@@ -80,6 +80,12 @@ background-attachment:fixed; background-size:cover;">
       已被真实
     </h6>
   </div>
+<!--  他是个鸡巴啊
+      他是个鸡巴啊
+      他是个鸡巴啊
+      他是个鸡巴啊
+      他是个鸡巴啊
+-->
   <div class="center">
     <a href="https://play.google.com/store/apps/details?id=com.bobek.compass">
       <img width="45%" src="https://camo.githubusercontent.com/1ddf90e524a4bfe8b77f9a6902d54fc708380389b7e0d7f9ad29196a799e77db/68747470733a2f2f706c61792e676f6f676c652e636f6d2f696e746c2f656e5f75732f6261646765732f696d616765732f67656e657269632f656e2d706c61792d62616467652e706e67">
