--- a/HTM/about/lu.htm
+++ b/HTM/about/lu.htm
@@ -33,7 +33,9 @@
 <a href="https://github.com/wgh136/PicaComic">
   <h1 style="text-align: center; color: yellow">PicaComic</h1>
 </a>
-<hr />
+<a href="1.html">
+  <hr />
+</a>
 <h1 style="text-align: center; color: royalblue">数据存储</h1>
 <h1 style="text-align: center; color: blue">
   <a href="https://123pan.com"> 123盘 </a>
