--- a/HTM/about/1.html
+++ b/HTM/about/1.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html style="background-image:url(1/cover.jpg);
+background-repeat:no-repeat; background-position:center center;
+background-attachment:fixed; background-size:cover;">
 
 <head>
+  <style>
+    .text{
+      color: #22F471 ;text-align: center
+    }
+  </style>
 </head>
 
 <body>
-
+  <div>
+    <a href="1/Q.htm">
+      <h1 class="text">
+        前篇
+      </h1>
+    </a>
+    <a href="1/H.htm">
+      <h1 class="text">
+        后篇
+      </h1>
+    </a>
+  </div>
 </body>
 
 </html>
