--- a/HTM/about/power.htm
+++ b/HTM/about/power.htm
@@ -1,12 +1,12 @@
 <html style="
-        background-image: url(&quot;http://www.panguidc.com/images/2024/08/20/20b9d8dd92df70a7ead4bbccf27ed8e0.png&quot;);
+        background-image: url(http://www.panguidc.com/images/2024/08/20/20b9d8dd92df70a7ead4bbccf27ed8e0.png);
         background-repeat: no-repeat;
         background-position: center center;
         background-attachment: fixed;
         background-size: cover;
     ">
 <a href="!.htm">
-  <img hspace="12.5%" src="http://www.panguidc.com/images/2024/08/21/e5ba240264e02f714de703f681d26bfd.jpeg" width="75%" />
+  <img hspace="12.5%" src="L/NG.jpg" width="75%" />
 </a>
 <h1 style="text-align: center; color: greenyellow">POWER BY</h1>
 <h1 style="text-align: center; color: greenyellow">斐济仙人</h1>
