--- a/HTM/about/power.htm
+++ b/HTM/about/power.htm
@@ -6,7 +6,7 @@
         background-size: cover;
     ">
 <a href="!.htm">
-  <img hspace="12.5%" src="L/NG.jpg" width="75%" />
+  <img hspace="12.5%" src="M/Screenshot_2024-09-02-17-42-34-496_com.tencent.mm.png" width="75%" />
 </a>
 <h1 style="text-align: center; color: greenyellow">POWER BY</h1>
 <h1 style="text-align: center; color: greenyellow">斐济仙人</h1>
