--- a/HTM/EVIL.LOVE.HTM
+++ b/HTM/EVIL.LOVE.HTM
@@ -1,6 +1,10 @@
 <html style="background-image:url(res/T/e.jpg);
 background-repeat:no-repeat; background-position:center center;
 background-attachment:fixed; background-size:cover;">
+
+<head>
+  <title>EVIL.LOVE</title>
+</head>
 <img src="res/T/E.gif" width="100%">
 <h2 style="text-align: center;color: red;font-size: 6rem">
   EVIL
