--- a/HTM/about/1.html
+++ b/HTM/about/1.html
@@ -4,13 +4,30 @@ background-repeat:no-repeat; background-position:center center;
 background-attachment:fixed; background-size:cover;">
 
 <head>
+  <title>
+    请选择
+  </title>
   <style>
-    .text{
-      color: #22F471 ;text-align: center
+    .text {
+      color: #22F471;
+      text-align: center
     }
   </style>
 </head>
-
+<table>
+  <th>
+  <tr>
+    <a href="1/Q.htm">
+    <img src="1/Q/0.jpg" style="width: 100%">
+    </a>
+  <tr>
+  <tr>
+    <a href="1/H.htm">
+      <img src="1/H/0.jpg" style="width: 100%">
+    </a>
+  </tr>
+  </th>
+</table>
 <body>
   <div>
     <a href="1/Q.htm">
