--- a/HTM/about/lu.htm
+++ b/HTM/about/lu.htm
@@ -5,6 +5,9 @@
         background-attachment: fixed;
         background-size: cover;
     ">
+<title>
+  未知
+</title>
 <h1 style="text-align: center; color: yellow">LU</h1>
 <h1 style="text-align: center; color: yellow">FROM</h1>
 <h1 style="text-align: center; color: yellow">斐济仙人</h1>
