--- a/HTM/main.htm
+++ b/HTM/main.htm
@@ -1,5 +1,7 @@
 <html>
-
+<head>
+  <title>主页</title>
+</head>
 <body style="background-image: url(&quot;https://www.panguidc.com/images/2024/08/20/9629239c33ad33fd9f7f0e2146283757.jpg&quot;);background-repeat: no-repeat;background-position: center center;background-attachment: fixed;background-size: cover;">
   <h1 style="font-size: 4rem">
     <a href="test.htm" style="color: #2ecc71"> WEL </a>
