--- a/HTM/sb.htm
+++ b/HTM/sb.htm
@@ -1,4 +1,7 @@
 <html>
+<title>
+  NEVER
+</title>
 <video src="res/V/rg.mp4" loop autoplay poster="res/Lod.gif" width="100%"></video>
 <video src="res/V/rg.mp4" loop autoplay poster="res/Lod.gif" width="100%"></video>
 <video src="res/V/rg.mp4" loop autoplay poster="res/Lod.gif" width="100%"></video>
