--- a/HTM/about/about.htm
+++ b/HTM/about/about.htm
@@ -1,5 +1,7 @@
 <html>
-
+<title>
+关于
+</title>
 <body style="background-image:url('http://www.panguidc.com/images/2024/08/20/a5ecf719426b7955f839ec6bfce4e58a.png');
   background-repeat:no-repeat; background-position:center center;
   background-attachment:fixed; background-size:cover;">
