--- a/HTM/about/work.htm
+++ b/HTM/about/work.htm
@@ -43,7 +43,7 @@ background-attachment:fixed; background-size:cover;">
     </h1>
   </div>
   <div class="center">
-    <a href="https://github.com/Kin69/EasyNotes/releases/latest">
+    <a href="https://github.com/Kin69/EasyNotes/releases/download/Nightly/EasyNotes-nightly.apk">
       <img width="35%" src="https://raw.githubusercontent.com/Kin69/EasyNotes/master/.github/nightly.png">
     </a>
   </div>
