--- a/HTM/main.htm
+++ b/HTM/main.htm
@@ -1,22 +1,26 @@
 <html>
+
 <head>
   <title>主页</title>
+  <link rel="stylesheet" href="sh/css.css">
+  <script src="sh/js.js"></script>
 </head>
+
 <body style="background-image: url(&quot;https://www.panguidc.com/images/2024/08/20/9629239c33ad33fd9f7f0e2146283757.jpg&quot;);background-repeat: no-repeat;background-position: center center;background-attachment: fixed;background-size: cover;">
-  <h1 style="font-size: 4rem">
+  <h1 class="box" style="font-size: 4rem">
     <a href="test.htm" style="color: #2ecc71"> WEL </a>
     <a href="c.htm" style="color: #2ecc71"> COME </a>
-  </h1>
-  <h2 style="text-align: right; color: cornflowerblue">
+  </h1 >
+  <h1 class="box" style="text-align: right; color: cornflowerblue">
     <a href="about/about.htm" style="color: cornflowerblue"> ABOUT </a>
     <a href="sb.htm" style="color: cornflowerblue"> S </a>
     <br>
     <a href="about/work.htm" style="color: cornflowerblue">
       WORK
     </a>
-  </h2>
-  <h2 style="text-align: right;color: cornflowerblue">
-  </h2>
+  </h1>
+  <h1 class="box" style="text-align: right;color: cornflowerblue">
+  </h1>
   <a href="DE.htm">
     <img src="res/1.jpg" width="100%" />
   </a>
@@ -39,11 +43,11 @@
     <img width="100%" src="res/T/E.gif" />
   </a>
   <hr>
-  <h1>
+  <h1  class="box">
     <a href="big.tes.htm" style="color: red"> BIG TE </a>
     <a href="sb.htm" style="color: red"> S </a>
     <a href="big.tes.htm" style="color: red"> T </a>
-  </h1>
+  </h1 >
 </body>
 
 </html>
