--- a/HTM/about/about.htm
+++ b/HTM/about/about.htm
@@ -1,4 +1,7 @@
 <html>
+  <head>
+  <link rel="stylesheet" href="https://utac99645.github.io/UT.AC/HTM/sh/about.css">
+  </head>
 <title>
 关于
 </title>
@@ -12,7 +15,7 @@
   <a href="power.htm">
     <img hspace="25%" alt="头像" width="50%" src="M/M.png">
   </a>
-  <h2 style="text-align:center;color: purple">
+  <h1 style="text-align:center;color: purple">
     NAME
     </h1>
     <h1 style="text-align:center;color: lightgreen">
@@ -22,10 +25,10 @@
     <h1 style="text-align:center;color: purple">
       MAIL
     </h1>
-    <a href="Mailto:DEATHLYSTILLNESS@OUTLOOK.COM">
-      <h2 style="text-align:center;color: lightgreen">
-        DEATHLYSTILLNESS@OUTLOOK.COM
-      </h2>
+    <a href="Mailto:UTAC99645@GMAIL.COM">
+      <h1 class="box" style="text-align:center;color: lightgreen">
+        UTAC99645@GMAIL.COM
+      </h1>
     </a>
     <a href="work.htm">
       <h1 style="text-align: center;color: purple">
