--- a/HTM/about/about.htm
+++ b/HTM/about/about.htm
@@ -1,6 +1,6 @@
 <html>
   <head>
-  <link rel="stylesheet" href="https://utac99645.github.io/UT.AC/HTM/sh/about.css">
+  <link rel="stylesheet" href="S/about.css">
   </head>
 <title>
 关于
@@ -8,30 +8,30 @@
 <body style="background-image:url('http://www.panguidc.com/images/2024/08/20/a5ecf719426b7955f839ec6bfce4e58a.png');
   background-repeat:no-repeat; background-position:center center;
   background-attachment:fixed; background-size:cover;">
-  <h1 style="color: cornflowerblue">
+  <h1 class="gy" style="color: cornflowerblue">
     关于
   </h1>
   <br>
   <a href="power.htm">
     <img hspace="25%" alt="头像" width="50%" src="M/M.png">
   </a>
-  <h1 style="text-align:center;color: purple">
+  <h1 class="name" style="color: blueviolet">
     NAME
     </h1>
-    <h1 style="text-align:center;color: lightgreen">
+    <h1 class="driver" style="color: lightgreen">
       DRIVER
     </h1>
     <br>
-    <h1 style="text-align:center;color: purple">
+    <h1 class="mail" style="color: blueviolet">
       MAIL
     </h1>
     <a href="Mailto:UTAC99645@GMAIL.COM">
-      <h1 class="box" style="text-align:center;color: lightgreen">
+      <h1 class="UTAC99645" style="color: lightgreen">
         UTAC99645@GMAIL.COM
       </h1>
     </a>
     <a href="work.htm">
-      <h1 style="text-align: center;color: purple">
+      <h1 class="work" style="text-align: center;color: blueviolet">
         WORK
       </h1>
     </a>
