--- a/HTM/main.htm
+++ b/HTM/main.htm
@@ -3,27 +3,26 @@
 <head>
   <title>主页</title>
   <link rel="stylesheet" href="sh/css.css">
+  <link rel="stylesheet" href="sh/color.css">
   <link rel="stylesheet" href="https://utac99645.github.io/UT.AC/HTM/sh/main.css">
   <script src="sh/js.js"></script>
 </head>
 
 <body style="background-image: url(&quot;https://www.panguidc.com/images/2024/08/20/9629239c33ad33fd9f7f0e2146283757.jpg&quot;);background-repeat: no-repeat;background-position: center center;background-attachment: fixed;background-size: cover;">
-  <h1 class="box" style="font-size: 4rem">
+  <h1 class="z3" style="font-size: 4rem">
     <a href="test.htm" style="color: #2ecc71"> WEL </a>
   </h1>
-  <h1 class="box" style="font-size: 4rem">
+  <h1 class="z4" style="font-size: 4rem">
     <a href="c.htm" style="color: #2ecc71"> COME </a>
   </h1>
-  <h1 class="box" style="color: cornflowerblue">
+  <h1 class="z5" style="color: cornflowerblue">
     <a href="about/about.htm" style="color: cornflowerblue"> ABOUT </a>
-    <a href="sb.htm" style="color: cornflowerblue"> S </a>
+    <a href="sb.htm" style="color: cornflowerblue">S</a>
   </h1>
-  <h1 class="box" style="color: cornflowerblue">
+  <h1 class="z4" style="color: cornflowerblue">
     <a href="about/work.htm" style="color: cornflowerblue">
       WORK
     </a>
-  </h1>
-  <h1 class="box" style="color: cornflowerblue">
   </h1>
   <a href="DE.htm">
     <img src="res/1.jpg" width="100%" />
@@ -48,28 +47,15 @@
   </a>
   <hr>
   <h1 class="box">
-    <table>
-      <tr>
-        <td>
-          <a href="big.tes.htm" style="color: red">
-            BIG TE
-          </a>
-        </td>
-        <td>
-          <a href="sb.htm" style="color: red">
-            S
-          </a>
-        </td>
-        <td>
-          <a href="big.tes.htm" style="color: red">
-            T
-          </a>
-        </td>
-      </tr>
-    </table>
-
-
-
+    <a href="big.tes.htm" style="color: red">
+      BIG TE
+    </a>
+    <a href="sb.htm" style="color: red">
+      S
+    </a>
+    <a href="big.tes.htm" style="color: red">
+      T
+    </a>
   </h1>
 </body>
 
