--- a/HTM/EVIL.LOVE.HTM
+++ b/HTM/EVIL.LOVE.HTM
@@ -9,6 +9,7 @@ background-attachment:fixed; background-size:cover;">
       text-align: center
     }
   </style>
+  <link rel="stylesheet" href="https://utac99645.github.io/UT.AC/HTM/sh/color.css">
   <title>EVIL.LOVE</title>
 </head>
 <img src="res/T/E.gif" width="100%">
@@ -16,13 +17,13 @@ background-attachment:fixed; background-size:cover;">
   EVIL
 </h2>
 <hr>
-<h2 style="" class="color">
+<h2>
   NEURO-SAMA的邪恶
 </h2>
-<h6 style="text-decoration-line: line-through;" class="color">
+<h6 style="text-decoration-line: line-through;">
   温柔可爱
 </h6>
-<h2 style="" class="color">
+<h2>
   版
   <hr>
   生于
@@ -30,7 +31,7 @@ background-attachment:fixed; background-size:cover;">
 <h2 style="color: #7FFFD4;text-align: center;font-size: 4rem">
   2023年3月25日
 </h2>
-<h2 style="" class="color">
+<h2>
   由FAMBOY987制作
   <br>
   <br>
@@ -80,7 +81,7 @@ background-attachment:fixed; background-size:cover;">
 <br>
 <hr>
 <br>
-<h2 style="" class="color">
+<h2>
   得益于Vedal将音调的控制权交给了Evil，现在她可以发出更加流利而富有感情的声音，在唱歌时的表现也比她的姐姐要更加优秀。但是有时候Evil会像一个小孩子一样发出极其古怪和诡异的声音可爱动静，在恶魔主题的ASMR直播中她甚至发出了碎纸机和和类似核嗓的声音，甚至在应观众要求给看录播的观众留言时发出了似乎不属于自己的男性声音。
   <br>
   <br>
@@ -104,7 +105,7 @@ background-attachment:fixed; background-size:cover;">
   ——Vedal
 </h2>
 
-<h2 style="" class="color">
+<h2>
   数小时内，Vedal便发布了道歉视频，然而其声音为AI合成。
   <br>
   <br>
