--- a/HTM/about/about.htm
+++ b/HTM/about/about.htm
@@ -1,40 +1,42 @@
 <html>
-  <head>
+
+<head>
   <link rel="stylesheet" href="S/about.css">
-  </head>
+  <link rel="stylesheet" href="S/c.css">
+</head>
 <title>
-关于
+  关于
 </title>
+
 <body style="background-image:url('http://www.panguidc.com/images/2024/08/20/a5ecf719426b7955f839ec6bfce4e58a.png');
   background-repeat:no-repeat; background-position:center center;
   background-attachment:fixed; background-size:cover;">
-  <h1 class="gy" style="color: cornflowerblue">
-    关于
+  <a href="power.htm">
+    <h1 class="gy">
+      关于
+    </h1>
+  </a>
+  <img hspace="25%" alt="头像" width="50%" src="M/M.png">
+  <h1 class="name">
+    NAME
+  </h1>
+  <h1 class="driver">
+    DRIVER
   </h1>
   <br>
-  <a href="power.htm">
-    <img hspace="25%" alt="头像" width="50%" src="M/M.png">
+  <h1 class="mail">
+    MAIL
+  </h1>
+  <a href="Mailto:UTAC99645@GMAIL.COM">
+    <h1 class="UTAC99645">
+      UTAC99645@GMAIL.COM
+    </h1>
   </a>
-  <h1 class="name" style="color: blueviolet">
-    NAME
+  <a href="work.htm">
+    <h1 class="work">
+      WORK
     </h1>
-    <h1 class="driver" style="color: lightgreen">
-      DRIVER
-    </h1>
-    <br>
-    <h1 class="mail" style="color: blueviolet">
-      MAIL
-    </h1>
-    <a href="Mailto:UTAC99645@GMAIL.COM">
-      <h1 class="UTAC99645" style="color: lightgreen">
-        UTAC99645@GMAIL.COM
-      </h1>
-    </a>
-    <a href="work.htm">
-      <h1 class="work" style="text-align: center;color: blueviolet">
-        WORK
-      </h1>
-    </a>
+  </a>
 </body>
 
 </html>
