--- a/HTM/about/power.htm
+++ b/HTM/about/power.htm
@@ -5,14 +5,15 @@
         background-attachment: fixed;
         background-size: cover;
     ">
+  <link rel="stylesheet" href="S/c.css">
 <title>
   支持
 </title>
 <a href="!.htm">
-  <img hspace="12.5%" src="M/Screenshot_2024-09-02-17-42-34-496_com.tencent.mm.png" width="75%" />
+  <img id="1" hspace="12.5%" src="M/mmexport1726464600772.png" width="75%" />
 </a>
 <h1 style="text-align: center; color: greenyellow">POWER BY</h1>
 <h1 style="text-align: center; color: greenyellow">斐济仙人</h1>
-<audio src="L/cf.mp3" autoplay loop></audio>
+<audio src="M/DM DOKURO - The Tale of a Cruel World.flac" autoplay loop></audio>
 
 </html>
