--- a/HTM/main.htm
+++ b/HTM/main.htm
@@ -7,7 +7,7 @@
   <script src="sh/js.js"></script>
 </head>
 
-<body style="background-image: url(&quot;https://www.panguidc.com/images/2024/08/20/9629239c33ad33fd9f7f0e2146283757.jpg&quot;);background-repeat: no-repeat;background-position: center center;background-attachment: fixed;background-size: cover;">
+<body style="background-image: url(https://nmgimg.www.panguidc.com/2024/09/17/49d2a162f187abc664f91b0b53659cbc.png);background-repeat: no-repeat;background-position: center center;background-attachment: fixed;background-size: cover;">
   <h1 class="z3" style="font-size: 4rem">
     <a href="test.htm" style="color: #2ecc71"> WEL </a>
   </h1>
