--- a/HTM/about/about.htm
+++ b/HTM/about/about.htm
@@ -12,11 +12,11 @@
   background-repeat:no-repeat; background-position:center center;
   background-attachment:fixed; background-size:cover;">
   <a href="power.htm">
-    <h1 class="gy">
-      关于
+    <h1 class="ABOUT">
+      ABOUT.2
     </h1>
   </a>
-  <img hspace="25%" alt="头像" width="50%" src="M/M.png">
+  <img width="50%" src="M/M.png">
   <h1 class="name">
     NAME
   </h1>
