--- a/HTM/about/work.htm
+++ b/HTM/about/work.htm
@@ -3,20 +3,19 @@ background-repeat:no-repeat; background-position:center center;
 background-attachment:fixed; background-size:cover;">
 
 <head>
+  <link rel="stylesheet" href="S/c.css">
   <style>
-    .center {
-      text-align: center;
-    }
+    img{
+      clear: both;
+      display: block;
+      margin: auto;
 
-    .text {
-      color: springgreen;
-      text-align: center;
     }
   </style>
 </head>
 
 <body>
-  <div class="text">
+  <div>
     <h1>
       MY WORKED
     </h1>
@@ -28,12 +27,12 @@ background-attachment:fixed; background-size:cover;">
     </h1>
     </dev>
     <hr>
-    <dev class="center">
+    <dev>
       <a href="https://github.com/Kin69/EasyNotes/">
       <img width="50%" src="https://raw.githubusercontent.com/Kin69/EasyNotes/master/app/src/main/res/mipmap-xxxhdpi/ic_launcher_round.webp">
       </a>
   </div>
-  <div class="text">
+  <div>
     <h1>
       主要工作
     </h1>
@@ -42,13 +41,13 @@ background-attachment:fixed; background-size:cover;">
       翻译:中文
     </h1>
   </div>
-  <div class="center">
+  <div>
     <a href="https://github.com/Kin69/EasyNotes/releases/download/Nightly/EasyNotes-nightly.apk">
       <img width="35%" src="https://raw.githubusercontent.com/Kin69/EasyNotes/master/.github/nightly.png">
     </a>
   </div>
   <hr>
-  <div class="text">
+  <div>
     <h1>
       NAME
     </h1>
@@ -57,12 +56,12 @@ background-attachment:fixed; background-size:cover;">
     </h1>
     </dev>
     <hr>
-    <dev class="center">
+    <dev>
       <a href="https://github.com/Kr0oked/Compass">
       <img width="50%" src="https://github.com/Kr0oked/Compass/blob/master/fastlane/metadata/android/en-US/images/icon.png?raw=true">
       </a>
   </div>
-  <div class="text">
+  <div>
     <h1>
       主要工作
     </h1>
@@ -74,9 +73,9 @@ background-attachment:fixed; background-size:cover;">
       <br>
       特别鸣谢:我的儿子:ddxgyff
     </h1>
-    <h6 class="text">
+    <h1 style="font-size: 5%">
       已被真实
-    </h6>
+    </h1>
   </div>
 <!--  他是个鸡巴啊
       他是个鸡巴啊
@@ -84,14 +83,16 @@ background-attachment:fixed; background-size:cover;">
       他是个鸡巴啊
       他是个鸡巴啊
 -->
-  <div class="center">
+  <div>
     <a href="https://play.google.com/store/apps/details?id=com.bobek.compass">
       <img width="45%" src="https://camo.githubusercontent.com/1ddf90e524a4bfe8b77f9a6902d54fc708380389b7e0d7f9ad29196a799e77db/68747470733a2f2f706c61792e676f6f676c652e636f6d2f696e746c2f656e5f75732f6261646765732f696d616765732f67656e657269632f656e2d706c61792d62616467652e706e67">
     </a>
   </div>
   <hr>
-  <div class="text">
-    还会有更多的!
+  <div>
+    <h1>
+      还会有更多的!
+    </h1>
   </div>
 </body>
 
