--- a/HTM/EVIL.LOVE.HTM
+++ b/HTM/EVIL.LOVE.HTM
@@ -3,7 +3,7 @@ background-repeat:no-repeat; background-position:center center;
 background-attachment:fixed; background-size:cover;">
 
 <head>
-  <link rel="stylesheet" href="sh/color.css">
+  <link rel="stylesheet" href="about/S/c.css">
   <link rel="stylesheet" href="sh/cn.css">
   <title>EVIL.LOVE</title>
 </head>
