--- a/HTM/main.htm
+++ b/HTM/main.htm
@@ -3,7 +3,7 @@
 <head>
   <title>主页</title>
   <link rel="stylesheet" href="sh/css.css">
-  <link rel="stylesheet" href="sh/color.css">
+  <link rel="stylesheet" href="about/S/c.css">
   <script src="sh/js.js"></script>
 </head>
 
