--- a/HTM/DE.htm
+++ b/HTM/DE.htm
@@ -1,6 +1,7 @@
 <html style="background-image:url(https://nmgimg.www.panguidc.com/2024/08/24/0e4832d547fc16e4aadca119ba8fce63.png);
 background-repeat:no-repeat; background-position:center center;
 background-attachment:fixed; background-size:cover;">
+  <link rel="stylesheet" href="about/S/c.css">
 <img src="res/DE/bg.jpg" alt="背景" width="100%">
 <img src="res/DE/De.png" alt="头像" width="50%" hspace="25%">
 <h1 style="text-align:center;color: yellow">
