--- a/index.html
+++ b/index.html
@@ -1,26 +1,61 @@
-<html style="
-        background-image: url(https://nmgimg.www.panguidc.com/2024/08/22/74c2084db66d56f43ba00b22f4cbede2.png);
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-attachment: fixed;
-        background-size: cover;
-    ">
+<html>
 
 <head>
-  <meta http-equiv="refresh" content="3;url=HTM/main.htm" />
+  <title>主页</title>
+  <link rel="stylesheet" href="sh/css.css">
+  <link rel="stylesheet" href="about/S/c.css">
+  <script src="sh/js.js"></script>
 </head>
 
-<body>
-  <h1 style="text-align: center">NOTHING HERE</h1>
-  <h1>
-    请等待...
-    <br />
-    将在3秒后跳转.
-    <br />
-    或
-    <a href="HTM/main.htm"> 点此跳转 </a>
+<body style="background-image: url(https://nmgimg.www.panguidc.com/2024/09/17/49d2a162f187abc664f91b0b53659cbc.png);background-repeat: no-repeat;background-position: center center;background-attachment: fixed;background-size: cover;">
+  <h1 class="z3" style="font-size: 4rem">
+    <a href="test.htm" style="color: #2ecc71"> WEL </a>
+  </h1>
+  <h1 class="z4" style="font-size: 4rem">
+    <a href="c.htm" style="color: #2ecc71"> COME </a>
+  </h1>
+  <h1 class="z5" style="color: cornflowerblue">
+    <a href="about/about.htm" style="color: cornflowerblue"> ABOUT </a>
+    <a href="sb.htm" style="color: cornflowerblue">S</a>
+  </h1>
+  <h1 class="z4" style="color: cornflowerblue">
+    <a href="about/work.htm" style="color: cornflowerblue">
+      WORK
+    </a>
+  </h1>
+  <a href="DE.htm">
+    <img src="res/1.jpg" width="100%" />
+  </a>
+  <a href="F.htm">
+    <img src="res/F.02.jpg" width="100%" />
+  </a>
+  <table>
+    <tr>
+      <video autoplay poster="res/Lod.gif" width="50%" loop>
+        <source src="res/GV4AUzDWwAA83FV.mp4" type="video/mp4">
+      </video>
+    </tr>
+    <tr>
+      <video style="m" autoplay poster="res/Lod.gif" width="50%" loop>
+        <source src="res/bau.mp4" type="video/mp4">
+      </video>
+    </tr>
+  </table>
+  <a href="EVIL.LOVE.HTM">
+    <img width="100%" src="res/T/E.gif" />
+  </a>
+  <hr>
+  <h1 class="box">
+    <a href="big.tes.htm" style="color: red">
+      BIG TE
+    </a>
+    <a href="sb.htm" style="color: red">
+      S
+    </a>
+    <a href="big.tes.htm" style="color: red">
+      T
+    </a>
   </h1>
 </body>
-<img src="HTM/res/Lod.gif" width="100%" alt="loding....." />
 
 </html>
