--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </video>
     </tr>
     <tr>
-      <video style="m" autoplay poster="res/Lod.gif" width="50%" loop>
+      <video autoplay poster="res/Lod.gif" width="50%" loop>
         <source src="res/bau.mp4" type="video/mp4">
       </video>
     </tr>
