about/S/about.css

--- a/about/about.htm
+++ b/about/about.htm
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="S/about.css">
   <link rel="stylesheet" href="S/c.css">
+  <link rel="stylesheet" href="S/color.css">
 </head>
 <title>
   支持
@@ -16,7 +17,7 @@
       ABOUT.2
     </h1>
   </a>
-  <img width="50%" src="M/M.png">
+  <img hspace="25%" width="50%" src="M/M.png">
   <h1 class="name">
     NAME
   </h1>
@@ -27,9 +28,9 @@
   <h1 class="mail">
     MAIL
   </h1>
-  <a href="Mailto:UTAC99645@GMAIL.COM">
+  <a href="Mailto:deathlystillness@outlook.COM">
     <h1 class="UTAC99645">
-      UTAC99645@GMAIL.COM
+      Deathlystillness@GMAIL.COM
     </h1>
   </a>
   <a href="work.htm">
@@ -37,6 +38,9 @@
       WORK
     </h1>
   </a>
+  <h1 class="man">
+    网页更新缓慢
+  </h1>
 </body>
 
 </html>
