--- a/about/about.htm
+++ b/about/about.htm
@@ -17,7 +17,7 @@
       ABOUT.2
     </h1>
   </a>
-  <img hspace="25%" width="50%" src="M/M.png">
+  <img hspace="25%" width="50%" src="https://github.com/UTAC99645/file.put/blob/main/res/m/m.png?raw=true">
   <h1 class="name">
     NAME
   </h1>
