--- a/about/power.htm
+++ b/about/power.htm
@@ -10,10 +10,10 @@
   支持
 </title>
 <a href="!.htm">
-  <img id="1" hspace="12.5%" src="M/mmexport1726464600772.png" width="75%" />
+  <img id="1" hspace="12.5%" src="https://github.com/UTAC99645/file.put/blob/main/res/m/mmexport1726464600772.png?raw=true" width="75%" />
 </a>
 <h1 style="text-align: center; color: greenyellow">POWER BY</h1>
 <h1 style="text-align: center; color: greenyellow">斐济仙人</h1>
-<audio src="M/DM DOKURO - The Tale of a Cruel World.flac" autoplay loop></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/m/DThe-Tale-of-a-Cruel-World.flac?raw=true" autoplay loop></audio>
 
 </html>
