--- a/about/!.htm
+++ b/about/!.htm
@@ -7,7 +7,7 @@ background-attachment:fixed; background-size:cover;">
 </h1>
 <hr>
 <a href="power.htm">
-  <img src="L/n.jpg" width="49%" align="lift">
+  <img src="https://github.com/UTAC99645/file.put/blob/main/res/L/n.jpg" width="49%" align="lift">
 </a>
 <a href="lu.htm">
   <img src="L/y.jpg" width="49%" align="right">
