--- a/about/1.html
+++ b/about/1.html
@@ -18,12 +18,12 @@ background-attachment:fixed; background-size:cover;">
   <th>
   <tr>
     <a href="1/Q.htm">
-    <img src="1/Q/0.jpg" style="width: 100%">
+    <img src="https://github.com/UTAC99645/file.put/blob/main/Q/0.jpg?raw=true" style="width: 100%">
     </a>
   <tr>
   <tr>
     <a href="1/H.htm">
-      <img src="1/H/0.jpg" style="width: 100%">
+      <img src="https://github.com/UTAC99645/file.put/blob/main/H/0.jpg?raw=true" style="width: 100%">
     </a>
   </tr>
   </th>
